update filter i quality data with user and with year, month, day, hour and minute
